--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "obs-source-visibility",
     "version": "1.0.0",
     "main": "index.js",
-    "casthub": {
+    "tnotifier": {
         "width": 5,
         "height": 4,
         "min_width": 4,
@@ -17,7 +17,7 @@
     },
     "devDependencies": {
         "@babel/preset-env": "^7.12.11",
-        "@casthub/types": "*",
+        "@tnotifier/types": "*",
         "babel-loader": "^8.2.2",
         "cross-env": "^7.0.3",
         "css-loader": "^5.0.1",
